[gd_scene load_steps=12 format=3 uid="uid://dkn4bafe024mn"]

[ext_resource type="Script" path="res://Scenes/Actors/player.gd" id="1_bbku4"]
[ext_resource type="Texture2D" uid="uid://cxcqy76dqa2fl" path="res://icon.svg" id="1_iqrrd"]
[ext_resource type="Script" path="res://Nodes/hurtbox.gd" id="4_y3su5"]
[ext_resource type="PackedScene" uid="uid://b0rukk3asy50k" path="res://Scenes/health_bar.tscn" id="5_hatmf"]
[ext_resource type="PackedScene" uid="uid://cl0r3cwtmqv67" path="res://Scenes/weapons/pistol.tscn" id="6_7x8a0"]
[ext_resource type="PackedScene" uid="uid://c0kufefi7vxrt" path="res://Scenes/weapons/bow.tscn" id="6_ybc8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4taf"]
size = Vector2(28, 28)

[sub_resource type="Animation" id="Animation_6owoy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_fehwb"]
resource_name = "player_run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 0.5), Vector2(0.6, 0.4), Vector2(0.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7eljo"]
_data = {
"RESET": SubResource("Animation_6owoy"),
"player_run": SubResource("Animation_fehwb")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cqjhi"]
size = Vector2(40, 43)

[node name="Player" type="CharacterBody2D"]
collision_mask = 0
script = ExtResource("1_bbku4")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_iqrrd")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_c4taf")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7eljo")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("4_y3su5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_cqjhi")

[node name="HealthBar" parent="." instance=ExtResource("5_hatmf")]
offset_left = -29.0
offset_top = -47.0
offset_right = 31.0
offset_bottom = -39.0
metadata/_edit_use_anchors_ = true

[node name="Pistol" parent="." instance=ExtResource("6_7x8a0")]
position = Vector2(56, 3)

[node name="Bow" parent="." instance=ExtResource("6_ybc8q")]
position = Vector2(-40, -8)
scale = Vector2(0.5, 0.5)

[node name="WeaponPositions" type="Node" parent="."]

[node name="Weapon1Position" type="Marker2D" parent="WeaponPositions"]
position = Vector2(64, 0)
metadata/_edit_lock_ = true

[node name="Weapon2Position" type="Marker2D" parent="WeaponPositions"]
position = Vector2(-56, 1)
metadata/_edit_lock_ = true

[node name="Weapon3Position" type="Marker2D" parent="WeaponPositions"]
position = Vector2(0, 32)
metadata/_edit_lock_ = true
